# CMake-Tutorial-sample

./: CMakeLists.txt  README.md  calc.cpp  calc.h  calc_lib.cpp  calc_lib.h  main.cpp
ctest/: CMakeLists.txt  addvalues_zero.cpp
includes/general/: header_general.h
includes/math/: header_math.h
test/: CMakeLists.txt  tests.cpp
test/ctest/: CMakeLists.txt  addvalues_negpos.cpp  assert_macro.h
